--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-reanimated": "^2.2.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "react-use": "^17.2.4",
