--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "chalk": "^4.1.2",
     "expo": "~42.0.1",
+    "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
@@ -22,6 +23,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-circular-progress-indicator": "^1.1.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-reanimated": "^2.2.0",
     "react-native-svg": "^12.1.1",
