--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.21.1",
     "chalk": "^4.1.2",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
+    "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
@@ -30,7 +33,9 @@
     "react-use": "^17.2.4",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "url": "^0.11.0",
+    "util": "^0.12.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
