--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
@@ -18,14 +19,17 @@
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-font": "~9.2.1",
+    "expo-google-sign-in": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "prop-types": "^15.7.2",
+    "query-string": "^7.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-circular-progress-indicator": "^1.1.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
