--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "axios": "^0.21.1",
     "chalk": "^4.1.2",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
+    "expo-font": "^9.2.1",
+    "expo-google-sign-in": "^9.2.1",
     "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
     "prop-types": "^15.7.2",
