--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-picker/picker": "^1.16.7",
+    "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "@reduxjs/toolkit": "^1.6.1",
