--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/google-signin": "^5.0.0",
+    "@react-native-community/netinfo": "^6.0.2",
     "@react-native-picker/picker": "^1.16.7",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "@reduxjs/toolkit": "^1.6.1",
+    "aws-amplify": "^4.3.0",
+    "aws-amplify-react-native": "^5.0.3",
     "axios": "^0.21.1",
     "chalk": "^4.1.2",
     "expo": "~42.0.1",
