--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
+    "react-navigation-header-buttons": "^9.0.0",
     "react-redux": "^7.2.4",
     "react-use": "^17.2.4",
     "redux": "^4.1.1",
