--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-svg": "^12.1.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.13.12",
     "react-navigation-header-buttons": "^9.0.0",
     "react-redux": "^7.2.4",
