--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-bottom-drawer-view": "^1.0.3",
     "react-native-circular-progress-indicator": "^1.1.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
