--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/netinfo": "6.0.0",
@@ -24,7 +23,7 @@
     "axios": "^0.21.1",
     "chalk": "^4.1.2",
     "expo": "~42.0.1",
-    "expo-app-loading": "^1.1.2",
+    "expo-app-loading": "1.1.2",
     "expo-font": "~9.2.1",
     "expo-google-sign-in": "~9.2.1",
     "expo-image-picker": "~10.2.2",
@@ -46,6 +45,7 @@
     "react-navigation-header-buttons": "^9.0.0",
     "react-redux": "^7.2.4",
     "react-use": "^17.2.4",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.0",
