--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/netinfo": "6.0.0",
