--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-circular-progress-indicator": "^1.1.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-header-scroll-view": "^2.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-reanimated": "~2.2.0",
