--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-header-scroll-view": "^2.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-modal": "^13.0.0",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-svg": "12.1.1",
