--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
     "url": "^0.11.0",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
