--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-circular-progress-indicator": "^1.1.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "^1.7.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-header-scroll-view": "^2.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
