--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "tailwind:build": "tailwind build -i ./styles/tailwind.css -o ./styles/styles.css",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -52,11 +53,16 @@
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
+    "tailwind-react-native-classnames": "^1.5.1",
+    "tailwind-rn": "^3.0.1",
     "url": "^0.11.0",
     "util": "^0.12.4"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.12"
   },
   "private": true
 }
