--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
+    "@klarna/react-native-vector-drawable": "^0.3.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/datetimepicker": "3.5.2",
@@ -45,6 +46,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-svg": "12.1.1",
     "react-native-swiper": "^1.6.0",
+    "react-native-vector-image": "^0.3.3",
     "react-native-web": "~0.13.12",
     "react-navigation-header-buttons": "^9.0.0",
     "react-redux": "^7.2.4",
