--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
 }
