--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-circle-checkbox": "^0.1.6",
     "react-native-circular-progress-indicator": "^1.1.2",
+    "react-native-dropdown-picker": "^5.3.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-header-scroll-view": "^2.0.0",
