--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@babel/core": "~7.9.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.12"
+    "tailwindcss": "^3.0.12",
     "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
