--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "@babel/core": "~7.9.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.12",
-    "react-native-svg-transformer": "^1.0.0"
+    "react-native-svg-transformer": "^1.0.0",
+    "tailwindcss": "^3.0.12"
   },
   "private": true
 }
