--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-get-random-values": "^1.7.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-header-scroll-view": "^2.0.0",
+    "react-native-image-viewing": "^0.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modal": "^13.0.0",
     "react-native-modal-datetime-picker": "^10.2.0",
