Add components: Room_DlvTip, DeliveryInfo_DlvTip, BtmLastMessage, Update a component: PlatformIcon, Change file paths and names

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "editor.scrollbar.horizontal": "visible",
-  "editor.scrollbar.scrollByPage": true
+  "editor.scrollbar.scrollByPage": true,
+  "typescript.updateImportsOnFileMove.enabled": "always"
 }
