--- a/AWS/amplify/.config/project-config.json
+++ b/AWS/amplify/.config/project-config.json
@@ -11,7 +11,7 @@
       "SourceDir": "src",
       "DistributionDir": "/",
       "BuildCommand": "npm run-script build",
-      "StartCommand": "npm run-script start"
+      "StartCommand": "expo start"
     }
   }
 }
