Complete create server-data

--- a/AWS/amplify/backend/backend-config.json
+++ b/AWS/amplify/backend/backend-config.json
@@ -75,17 +75,7 @@
     "s3fd8cfc0a": {
       "service": "S3",
       "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "halfdeliveryNewAuth220124PostConfirmation",
-          "attributes": [
-            "Name",
-            "Arn",
-            "LambdaExecutionRole"
-          ]
-        }
-      ]
+      "dependsOn": []
     }
   }
 }
