Complete 매칭방 생성/ 입장 flow
- 기존 CRUD 문제는, DB 스키마 및 DataStore.save() 문법 문제였음. 그러나 AWS 의 error log 가 정확하지 않아 매우 헤맸던 것.

- 대대적인 DB 스키마 업데이트가 있었음. 바뀐 DB에 맞게 프론트도 수정함

-  DB 스키마 수정 중 Deploy failed 이슈의 원인으로 function 과 auth 의 함수가 꼬인것이 확인 됨. 어쩔 수 없이 이것들을 밀어버리고 새로 생성 함.
부작용으로 유저 테이블 초기화됨

- 매칭방 생성/입장 flow 최종 완성 됨. 다만, 내가 만든 방은 보여주지 않는 것이 맞지만, 개발하는동안 원활한 진행을 위해 일부러 해결하지 않았음

- SignUp flow 에서 iOS 기준 "인증번호 요청" 텍스트와 단과대학 선택 dropdown 이 표출되지않는 문제를 파악하고 해결 함. 이때문에 merge 시에 conflict 가 발생할 수 있음

- TODO: 회원가입시, User 테이블에 정보가 올바르게 저장되도록 수정할 에정임. 현재는 이전에 "핸드폰을 통한 Auth 인증 "을 확인하기 위해 구축한 임시 Lambda function 임. 이를 수정하거나 DataStore.save() 함수를 통해 보완할 예정

--- a/AWS/amplify/.config/project-config.json
+++ b/AWS/amplify/.config/project-config.json
@@ -11,7 +11,7 @@
       "SourceDir": "src",
       "DistributionDir": "/",
       "BuildCommand": "npm run-script build",
-      "StartCommand": "expo start"
+      "StartCommand": "npm run-script start"
     }
   }
 }
