--- a/package.json
+++ b/package.json
@@ -71,10 +71,12 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/react-native": "~0.63.2",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "react-native-svg-transformer": "^1.0.0",
-    "tailwindcss": "^3.0.12"
+    "tailwindcss": "^3.0.12",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
