--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/google-signin": "^5.0.0",
@@ -60,6 +60,8 @@
     "react-redux": "^7.2.4",
     "react-use": "^17.2.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "recoil": "^0.7.2",
+    "recoil-persist": "^4.1.0",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
